--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-<title>portfolyo</title>
+<title>Sude Nur Gulcan</title>
 </head>
  <body>
     <nav id="navbar">
